# DevOps-Course-Mars-Rover

./: .env.template  README.md  pyproject.toml
app/: app.py
app/data/: response_items.py
app/templates/: index.html  layout.html  mars.html
